--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   },
   "keywords": [
     "url",
-    "shortener"
+    "shortener",
+    "url shortener",
+    "url-shortener"
   ],
   "author": "Ilya Revenko <ilya.revenko17@gmail.com>",
   "license": "MIT",
@@ -28,5 +30,10 @@
     "koa-router": "^9.0.1",
     "mongoose": "^5.9.18",
     "shortid": "^2.2.15"
+  },
+  "devDependencies": {
+    "eslint": "^7.2.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-plugin-import": "^2.21.2"
   }
 }
