--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
   },
   "homepage": "https://github.com/irevenko/url-shortener#readme",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "dotenv": "^8.2.0",
+    "jsonwebtoken": "^8.5.1",
     "koa": "^2.12.0",
     "koa-bodyparser": "^4.3.0",
     "koa-ejs": "^4.3.0",
+    "koa-json": "^2.0.2",
     "koa-router": "^9.0.1",
     "mongoose": "^5.9.18",
     "shortid": "^2.2.15"
